--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,18 +8,18 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 4th</h1>
-            <h3>Week 23 Day 3 (Intro to CSS)</h3>
+            <h1>GDWD 105 - Agenda for February 5th</h1>
+            <h3>Week 23 Day 4 (Intro to CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite superhero movie or series? (if you have one)</li>
+                        <li>Who is your favorite villain or supervillain? (if you have one)</li>
                     </ul>
-                    <div class="img-container more-space dark-gray">
-                        <img 
-                            src="images/avengers.jpeg"
-                            alt="avengers"
+                    <div class="img-container more-space off-black">
+                        <img
+                            src="images/venom.jpeg"
+                            alt="venom"
                         >
                     </div>
                 </div>
@@ -30,14 +30,14 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>CSS Selectors</li>
+                            <li><span class="type">PowerPoint</span>Document Flow</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Styling Containers</li>
+                            <li><span class="type">Demo</span>The display CSS Property</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -49,13 +49,13 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Floating Color Palettes</li>
+                            <li><span class="type">Exercise</span>Upside-down Tetris</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Exercise</span>Floating Color Palettes</li>
+                            <li><span class="type">Exercise</span>Upside-down Tetris</li>
                         </ul>
                     </div>
                 </div>
