adding license ec

--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -50,6 +50,7 @@
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
                             <li><span class="type">Exercise</span>Upside-down Tetris</li>
+                            <li><span class="type">Extra Credit</span>Generic License</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
