added quiz study tips

--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -14,11 +14,15 @@
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Who is your favorite villain or supervillain? (if you have one)</li>
+                        <li>
+                            If you could work on anything, without 
+                            limitations or restrictions, what would your 
+                            dream project be?
+                        </li>
                     </ul>
-                    <div class="img-container more-space off-black">
+                    <div class="img-container ">
                         <img
-                            src="images/venom.jpeg"
+                            src="images/dreambig.png"
                             alt="venom"
                         >
                     </div>
@@ -50,6 +54,7 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
+                            <li><span class="type">Lab Time</span>Quiz Study Tips</li>
                             <li><span class="type">Project</span>Bulletin Board [cont.]</li>
                         </ul>
                     </div>
