--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,21 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 6th</h1>
-            <h3>Week 23 Day 5 (Intro to CSS)</h3>
+            <h1>GDWD 105 - Agenda for February 9th</h1>
+            <h3>Week 24 Day 1 (Intermediate CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you could work on anything, without 
-                            limitations or restrictions, what would your 
-                            dream project be?
+                            Would you rather have a pause or 
+                            rewind button in your life?
                         </li>
                     </ul>
-                    <div class="img-container ">
-                        <img
-                            src="images/dreambig.png"
-                            alt="venom"
+                    <div class="img-container more-space black">
+                        <img 
+                            src="images/rewind.png"
+                            alt="be kind, rewind"
                         >
                     </div>
                 </div>
@@ -34,15 +33,16 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>CSS Rules Review</li>
-                            <li><span class="type">Project</span>Bulletin Board</li>
+                            <li><span class="type">Quiz</span>Intro to CSS</li>
+                            <li><span class="type">Survey</span>Intro to CSS Wrap Up</li>
+                            <li><span class="type">PowerPoint</span>Box Model</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Bulletin Board [cont.]</li>
+                            <li><span class="type">Demo</span>Box Model</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -54,14 +54,15 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Tips</li>
-                            <li><span class="type">Project</span>Bulletin Board [cont.]</li>
+                            <li><span class="type">Extra Credit</span>Box Framing</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Project</span>Bulletin Board</li>
+                            <li><span class="type">Quiz</span>Intro to CSS</li>
+                            <li><span class="type">Survey</span>Intro to CSS Wrap Up</li>
+                            <li><span class="type">Extra Credit</span>Box Framing</li>
                         </ul>
                     </div>
                 </div>
