--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,21 +8,21 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 9th</h1>
-            <h3>Week 24 Day 1 (Intermediate CSS)</h3>
+            <h1>GDWD 105 - Agenda for February 10th</h1>
+            <h3>Week 24 Day 2 (Intermediate CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
-                    <ul>
+                     <ul>
                         <li>
-                            Would you rather have a pause or 
-                            rewind button in your life?
+                            Would you rather watch <b>only scary movies</b> or 
+                            <b>only rom-coms</b> for the rest of your life?
                         </li>
                     </ul>
                     <div class="img-container more-space black">
                         <img 
-                            src="images/rewind.png"
-                            alt="be kind, rewind"
+                            src="images/anti-love.jpg"
+                            alt="anti love helmet"
                         >
                     </div>
                 </div>
@@ -33,16 +33,14 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Intro to CSS</li>
-                            <li><span class="type">Survey</span>Intro to CSS Wrap Up</li>
-                            <li><span class="type">PowerPoint</span>Box Model</li>
+                            <li><span class="type">PowerPoint</span>Combining Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Box Model</li>
+                            <li><span class="type">Demo</span>Combining Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -54,15 +52,13 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Box Framing</li>
+                            <li><span class="type">Exercise</span>Limited Sidebar</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Quiz</span>Intro to CSS</li>
-                            <li><span class="type">Survey</span>Intro to CSS Wrap Up</li>
-                            <li><span class="type">Extra Credit</span>Box Framing</li>
+                            <li><span class="type">Exercise</span>Limited Sidebar</li>
                         </ul>
                     </div>
                 </div>
