--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,21 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 10th</h1>
-            <h3>Week 24 Day 2 (Intermediate CSS)</h3>
+            <h1>GDWD 105 - Agenda for February 11th</h1>
+            <h3>Week 24 Day 3 (Intermediate CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
-                     <ul>
+                    <ul>
                         <li>
-                            Would you rather watch <b>only scary movies</b> or 
-                            <b>only rom-coms</b> for the rest of your life?
+                            Do you have a favorite obscure movie/series/game 
+                            that no one else seems to know about? If so, share
+                            it with the class!
                         </li>
                     </ul>
-                    <div class="img-container more-space black">
+                    <div class="img-container">
                         <img 
-                            src="images/anti-love.jpg"
-                            alt="anti love helmet"
+                            src="images/shooting-star.jpg"
+                            alt="shooting star"
                         >
                     </div>
                 </div>
@@ -33,14 +34,15 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Combining Selectors</li>
+                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
+                            <li><span class="type">Kahoot</span>English to CSS Selectors Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Combining Selectors</li>
+                            <li><span class="type">Demo</span>Buttons</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -52,13 +54,13 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Limited Sidebar</li>
+                            <li><span class="type">Exercise</span>Limited Daily Planner</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Exercise</span>Limited Sidebar</li>
+                            <li><span class="type">Exercise</span>Limited Daily Planner</li>
                         </ul>
                     </div>
                 </div>
