--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 17th</h1>
-            <h3>Week 25 Day 1 (Advanced CSS I - Flexbox)</h3>
+            <h1>GDWD 105 - Agenda for February 18th</h1>
+            <h3>Week 25 Day 2 (Advanced CSS I - Flexbox)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        Would you rather:
-                        <ul>
-                            <li>get an extra hour in every day, or</li>
-                            <li>get an extra day every 24 days?</li>
-                        </ul>
+                        <li>
+                            If you could have any creature (either real or fantastical)
+                            as a pet, what would you choose?
+                        </li>
+
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/melty-time.webp"
-                            alt="melty time"
+                            src="images/alt-animal-names.webp"
+                            alt="true names"
                         >
                     </div>
                 </div>
@@ -34,18 +34,16 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Intermediate CSS</li>
-                            <li><span class="type">Survey</span>Intermediate CSS Wrap Up</li>
-                            <li><span class="type">Showcase</span>Product Showcase Sites</li>
+                            <li><span class="type">PowerPoint</span>Content Layouts - Side by Side</li>
+                            <li><span class="type">Demo</span>Media & Text</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Content Layouts - Cards</li>
-                            <li><span class="type">PowerPoint</span>Flexbox - Part 1</li>
-                            <li><span class="type">Demo</span>Three Cards</li>
+                            <li><span class="type">Demo</span>Media & Text [cont.]</li>
+                            <li><span class="type">Exercise</span>Side by Side Recipes</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -57,15 +55,13 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Three Profile Cards</li>
+                            <li><span class="type">Exercise</span>Side by Side Recipes [cont.]</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Quiz</span>Intermediate CSS</li>
-                            <li><span class="type">Survey</span>Intermediate CSS Wrap Up</li>
-                            <li><span class="type">Extra Credit</span>Three Profile Cards</li>
+                            <li><span class="type">Exercise</span>Side by Side Recipes</li>
                         </ul>
                     </div>
                 </div>
