--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -34,6 +34,7 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
+                            <li><span class="type">Activity</span>Two Cards Design Sprint</li>
                             <li><span class="type">PowerPoint</span>Content Layouts - Side by Side</li>
                             <li><span class="type">Demo</span>Media & Text</li>
                         </ul>
