--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 18th</h1>
-            <h3>Week 25 Day 2 (Advanced CSS I - Flexbox)</h3>
+            <h1>GDWD 105 - Agenda for February 19th</h1>
+            <h3>Week 25 Day 3 (Advanced CSS I - Flexbox)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you could have any creature (either real or fantastical)
-                            as a pet, what would you choose?
+                            Would you rather have the power of flight
+                            or the power to levitate objects?
                         </li>
 
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/alt-animal-names.webp"
-                            alt="true names"
+                            src="images/broom-cats.jpg"
+                            alt="broom cats"
                         >
                     </div>
                 </div>
@@ -34,15 +34,15 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Activity</span>Two Cards Design Sprint</li>
-                            <li><span class="type">PowerPoint</span>Content Layouts - Side by Side</li>
+                            <li><span class="type">Exercise</span>Side by Side Recipes [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Navigation Layouts - Navbars</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Media & Text</li>
+                            <li><span class="type">Demo</span>Basic Navbars</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -54,13 +54,14 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Side by Side Recipes</li>
+                            <li><span class="type">Exercise</span>Site Scaffolding</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
                             <li><span class="type">Exercise</span>Side by Side Recipes</li>
+                            <li><span class="type">Exercise</span>Site Scaffolding</li>
                         </ul>
                     </div>
                 </div>
