--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 19th</h1>
-            <h3>Week 25 Day 3 (Advanced CSS I - Flexbox)</h3>
+            <h1>GDWD 105 - Agenda for February 20th</h1>
+            <h3>Week 25 Day 4 (Advanced CSS I - Flexbox)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather have the power of flight
-                            or the power to levitate objects?
+                            Would you rather have: a bag that could hold anything, or
+                            your own pocket-dimension accessed via suitcase?
                         </li>
 
                     </ul>
                     <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/broom-cats.jpg"
-                            alt="broom cats"
+                            src="images/hoarder-fox.webp"
+                            alt="hoarder fox"
                         >
                     </div>
                 </div>
@@ -34,15 +34,15 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Side by Side Recipes [cont.]</li>
-                            <li><span class="type">PowerPoint</span>Navigation Layouts - Navbars</li>
+                            <li><span class="type">PowerPoint</span>Page Layouts - Two Columns</li>
+                            <li><span class="type">Demo</span>Two Columns w/ Sidebar</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Basic Navbars</li>
+                            <li><span class="type">Demo</span>Two Columns w/ Sidebar (Fancy)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -54,14 +54,13 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Site Scaffolding</li>
+                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Exercise</span>Side by Side Recipes</li>
-                            <li><span class="type">Exercise</span>Site Scaffolding</li>
+                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
                         </ul>
                     </div>
                 </div>
