--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 20th</h1>
-            <h3>Week 25 Day 4 (Advanced CSS I - Flexbox)</h3>
+            <h1>GDWD 105 - Agenda for February 23th</h1>
+            <h3>Week 25 Day 5 (Advanced CSS I - Flexbox)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather have: a bag that could hold anything, or
-                            your own pocket-dimension accessed via suitcase?
+                            Would you rather have a perfect photographic memory 
+                            or a perfect echoic memory?
                         </li>
 
                     </ul>
-                    <div class="img-container more-space dark-gray">
+                    <div class="img-container more-space blue-gray">
                         <img 
-                            src="images/hoarder-fox.webp"
-                            alt="hoarder fox"
+                            src="images/lab-fox.webp"
+                            alt="lab fox"
                         >
                     </div>
                 </div>
@@ -34,15 +34,14 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Page Layouts - Two Columns</li>
-                            <li><span class="type">Demo</span>Two Columns w/ Sidebar</li>
+                            <li><span class="type">Project</span>Mebay Product Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Two Columns w/ Sidebar (Fancy)</li>
+                            <li><span class="type">Project</span>Mebay Product Page [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -54,13 +53,14 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
+                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
+                            <li><span class="type">Project</span>Mebay Product Page [cont.]</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
+                            <li><span class="type">Project</span>Mebay Product Page</li>
                         </ul>
                     </div>
                 </div>
